New update on friday

--- a/locales/en.json
+++ b/locales/en.json
@@ -47,7 +47,7 @@
             "Link_5": "Gift certificates",
             "Link_6": "Follow us"
         },
-        "Copyright": "This site is built by LEE_Young_Min for demonstration purposes only."
+        "Copyright": "금요일에 업데이트 된 페이지입니다."
     },
 	"Login": {
 		"Title": "Login",
